--- a/full-stack-app/full_stack_app/templates/memory.xhtml
+++ b/full-stack-app/full_stack_app/templates/memory.xhtml
@@ -13,6 +13,7 @@
             <div py:content="memory.content"></div>
           </li>
         </ul>
+        ${memory_form.display(action=url('/memory/new'))}
       </div>
       <!--div class="row">
         <div class="col-md-12">
