Aded working form for creating new memory

--- a/full-stack-app/full_stack_app/templates/memory.xhtml
+++ b/full-stack-app/full_stack_app/templates/memory.xhtml
@@ -6,7 +6,7 @@
     <body py:block="body" py:strip="True">
       <div class="main_content">
         <h1>All memories</h1>
-        <div><a href="/add_memory">Add memory</a></div><br></br>
+        <div><a href="memory/adding">Add memory</a></div><br></br>
         <ul>
           <li py:for="memory in memories">
             <b><div py:content="memory.name"></div></b>
