Fixed little adding memory

--- a/full-stack-app/full_stack_app/templates/adding.xhtml
+++ b/full-stack-app/full_stack_app/templates/adding.xhtml
@@ -7,7 +7,7 @@
       <div class="main_content">
         <h1>Adding your new memory:</h1>
         <h4>Input please all fields</h4> <br></br>
-        ${memory_form.display(action=url('/memory'))}
+        ${memory_form.display()}
       </div>
     </body>
 </html>
