Mede working edit form. Work on a simple GRUD is completed

--- a/full-stack-app/full_stack_app/templates/edit.xhtml
+++ b/full-stack-app/full_stack_app/templates/edit.xhtml
@@ -7,7 +7,7 @@
       <div class="main_content">
         <h1>Edit your memory: ${memory.name}</h1>
         <h4>Just edit what you want</h4><br />
-        ${edit_form.display(action=url('/memory/save'))}
+        ${edit_form.display(action=url('/memory/save'), value=value)}
       </div>
     </body>
 </html>
